force-app/main/default/objects/CA10V__CaVCenterVirtualMachine__c/fields/caOpt_breezeHostInfoMacAddress__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoMacAddress__c</fullName>
    <label>Breeze: MAC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>