force-app/main/default/objects/CA10V__CaVCenterVirtualMachine__c/fields/caOpt_breezeHostInfoMtu__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoMtu__c</fullName>
    <label>Breeze: MTU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>