force-app/main/default/objects/CA10V__CaVCenterVirtualMachine__c/fields/caOpt_breezeHostInfoOsRelease__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoOsRelease__c</fullName>
    <label>Breeze: OS Release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>