force-app/main/default/objects/CA10V__CaVCenterVirtualMachine__c/fields/caOpt_breezeHostInfoRamFree__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoRamFree__c</fullName>
    <label>Breeze: RAM Free (GB)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>