force-app/main/default/objects/CA10V__CaVCenterVirtualMachine__c/fields/caOpt_breezeHostInfoRamSize__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoRamSize__c</fullName>
    <label>Breeze: RAM Size (GB)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>