force-app/main/default/objects/CA10V__CaVCenterVirtualMachine__c/fields/caOpt_breezeHostInfoVirtualizationType__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoVirtualizationType__c</fullName>
    <label>Breeze: Virtualization Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>