force-app/main/default/objects/CA10V__CaVCenterVirtualMachine__c/fields/caOpt_breezeInstallExtensionOpId__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeInstallExtensionOpId__c</fullName>
    <label>Breeze: Install Extension Operation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>