force-app/main/default/objects/CA10V__CaVCenterVirtualMachine__c/fields/caOpt_breezePlatformType__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezePlatformType__c</fullName>
    <label>Breeze: Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>