force-app/main/default/objects/CA10V__CaVCenterVirtualMachine__c/fields/caOpt_breezeUpgradablePackagesTotal__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeUpgradablePackagesTotal__c</fullName>
    <label>Breeze: Upgradable Packages, Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>